# trivial_log

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: valgrind-rust.supp
.github/workflows/: check.yml  coverage.yaml
examples/: async.rs  color.rs  database.rs  database.rs.disabled  default.rs  file.rs  json.rs  trivial.rs
src/: error.rs  impls.rs  lib.rs  util.rs
