[package]
name = "trivial_log"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Schuetz <aschuetz@protonmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
readme = "README.md"
keywords = ["logging", "log"]
license = "Zlib"

[dependencies]
log = { version = "^0.4" }

[lints.rust]
future-incompatible = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
allow_attributes = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"

[dev-dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }