[package]
name = "trivial_log"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Schuetz <aschuetz@protonmail.com>", "Kevin Nakamura <grinkers@grinkers.net>"]
readme = "README.md"
keywords = ["logging", "log"]
license = "Zlib"

[features]
default = ["chrono"]

[dependencies]
log = { version = "^0.4" }
chrono = { version = "0.4.39", optional = true }

[lints.rust]
future-incompatible = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
allow_attributes = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ansi_term = "0.12.1"
#rusqlite = { version = "0.33.0", features = ["bundled"] }